--- a/src/index.html
+++ b/src/index.html
@@ -8,10 +8,10 @@
     <meta name="description" content="code cafe,partfolio, command, team">
     <title>CREATIVE</title>
     <link rel="icon" href="favicon.png">
-    <link href="src/stylesheet/reset.css" rel="stylesheet">
+    <link href="stylesheet/reset.css" rel="stylesheet">
     <link rel="stylesheet" href="https://unpkg.com/flickity@2/dist/flickity.min.css">
-    <link href="src/stylesheet/style.css" rel="stylesheet">
-    <link href="src/fonts/fonts.css" rel="stylesheet">
+    <link href="stylesheet/style.css" rel="stylesheet">
+    <link href="fonts/fonts.css" rel="stylesheet">
     <!--[if lt IE 9]>
     <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
     <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
@@ -21,7 +21,7 @@
 
 <header id="head" class="ha-header-block">
     <header class="ha-header">
-        <img class="ha-header__logo" src="src/image/logo.svg" alt="logotype">
+        <img class="ha-header__logo" src="image/logo.svg" alt="logotype">
         <div class="menu-collapsed">
             <div class="bar"></div>
             <nav>
@@ -56,7 +56,7 @@
     <div class="fa-main-container">
         <section id="about" class="fa-main-container__about-us">
             <section class="fa-about-us-preview">
-                <img class="fa-about-us-preview__icon" src="src/image/icon-aboutus.png"
+                <img class="fa-about-us-preview__icon" src="image/icon-aboutus.png"
                      alt="icon-about_us">
                 <h3 class="fa-about-us-preview__title">About Us</h3>
             </section>
@@ -85,14 +85,14 @@
         <section id="services" class="fa-main-container__our-services">
             <section class="fa-our-services-item-block">
                 <div class="our-services-small our-services-small--dark">
-                    <img class="our-services-small__icon" src="src/image/icon-graphic.png"
+                    <img class="our-services-small__icon" src="image/icon-graphic.png"
                          alt="icon-graphic">
                     <h2 class="our-services-small__title">GRAPHIC DESIGN</h2>
                     <p class="our-services-small__description">Cras mattis consectetur purus sit
                         amet fermentum.</p>
                 </div>
                 <div class="our-services-small">
-                    <img class="our-services-small__icon" src="src/image/icon-seo.png"
+                    <img class="our-services-small__icon" src="image/icon-seo.png"
                          alt="icon-seo">
                     <h2 class="our-services-small__title">SEO & MARKETING</h2>
                     <p class="our-services-small__description">Cras mattis consectetur purus sit
@@ -101,14 +101,14 @@
             </section>
             <section class="fa-our-services-item-block">
                 <div class="our-services-small">
-                    <img class="our-services-small__icon" src="src/image/icon-web.png"
+                    <img class="our-services-small__icon" src="image/icon-web.png"
                          alt="icon-web">
                     <h2 class="our-services-small__title">WEB DEVELOPMENT</h2>
                     <p class="our-services-small__description">Cras mattis consectetur purus sit
                         amet fermentum.</p>
                 </div>
                 <div class="our-services-small our-services-small--dark">
-                    <img class="our-services-small__icon" src="src/image/icon-mobile.png"
+                    <img class="our-services-small__icon" src="image/icon-mobile.png"
                          alt="icon-graphic">
                     <h2 class="our-services-small__title">MOBILE DEVELOPMENT</h2>
                     <p class="our-services-small__description">Cras mattis consectetur purus sit
@@ -116,7 +116,7 @@
                 </div>
             </section>
             <section class="fa-our-services-block-long">
-                <img class="fa-our-services-block-long__icon" src="src/image/icon-services.png"
+                <img class="fa-our-services-block-long__icon" src="image/icon-services.png"
                      alt="icon-services">
                 <h3 class="fa-our-services-block-long__title">OUR SERVICES</h3>
                 <p class="fa-our-services-block-long__description">“Nullam quis risus eget urna
@@ -129,15 +129,15 @@
     </div>
     <section id="works" class="fa-recent-work">
         <header class="fa-header-works">
-            <img class="fa-header-works__image" src="src/image/icon-works.png" alt="our works">
+            <img class="fa-header-works__image" src="image/icon-works.png" alt="our works">
             <h3 class="fa-header-works__title">RECENT WORKS</h3>
         </header>
         <section class="fa-content-works">
             <div class="carousel" data-flickity>
-                <div class="carousel-cell"><img src="src/image/campofr.png" alt="camporf"></div>
-                <div class="carousel-cell"><img src="src/image/campofr.png" alt="camporf"></div>
-                <div class="carousel-cell"><img src="src/image/campofr.png" alt="camporf"></div>
-                <div class="carousel-cell"><img src="src/image/campofr.png" alt="camporf"></div>
+                <div class="carousel-cell"><img src="image/campofr.png" alt="camporf"></div>
+                <div class="carousel-cell"><img src="image/campofr.png" alt="camporf"></div>
+                <div class="carousel-cell"><img src="image/campofr.png" alt="camporf"></div>
+                <div class="carousel-cell"><img src="image/campofr.png" alt="camporf"></div>
             </div>
 
         </section>
@@ -147,13 +147,13 @@
     </section>
     <section class="fa-meet-team">
         <header class="fa-header-meet">
-            <img class="fa-header-meet__icon" src="src/image/icon-team.png"
+            <img class="fa-header-meet__icon" src="image/icon-team.png"
                  alt="meet our team icon">
             <h3 class="fa-header-meet__title">MEET OUR TEAM</h3>
         </header>
         <section class="carousel-team" data-flickity>
             <section class="carousel-cell-team">
-                <img class="carousel-cell-team__person" src="src/image/meguel_orbien.png"
+                <img class="carousel-cell-team__person" src="image/meguel_orbien.png"
                      alt="meguel_obrien">
                 <address class="carousel-person-info">
                     <h4 class="carousel-person-info__name">Miguel Obrien</h4>
@@ -162,23 +162,23 @@
                 <footer class="carousel-cell-team__socialnet">
                     <ul class="social-account">
                         <li class="social-account__item"><a href="#"><img
-                                src="src/image/linked-in.svg"
+                                src="image/linked-in.svg"
                                 alt="linked-in"></a></li>
                         <li class="social-account__item"><a href="#"><img
-                                src="src/image/google-.svg"
+                                src="image/google-.svg"
                                 alt="google"></a></li>
                         <li class="social-account__item"><a href="#"><img
-                                src="src/image/facebook.svg"
+                                src="image/facebook.svg"
                                 alt="facebook"></a></li>
                         <li class="social-account__item"><a href="#"><img
-                                src="src/image/twitter.svg"
+                                src="image/twitter.svg"
                                 alt="twitter"></a></li>
                     </ul>
                 </footer>
             </section>
 
             <section class="carousel-cell-team">
-                <img class="carousel-cell-team__person" src="src/image/jackie_carrol.png"
+                <img class="carousel-cell-team__person" src="image/jackie_carrol.png"
                      alt="meguel_obrien">
                 <address class="carousel-person-info">
                     <h4 class="carousel-person-info__name">Jackie Carroll</h4>
@@ -187,26 +187,26 @@
                 <footer class="carousel-cell-team__socialnet">
                     <ul class="social-account">
                         <li class="social-account__item"><a href="#"><img
-                                src="src/image/behance.svg"
+                                src="image/behance.svg"
                                 alt="behance"></a></li>
                         <li class="social-account__item"><a href="#"><img
-                                src="src/image/linked-in.svg"
+                                src="image/linked-in.svg"
                                 alt="linked-in"></a></li>
                         <li class="social-account__item"><a href="#"><img
-                                src="src/image/google-.svg"
+                                src="image/google-.svg"
                                 alt="google"></a></li>
                         <li class="social-account__item"><a href="#"><img
-                                src="src/image/facebook.svg"
+                                src="image/facebook.svg"
                                 alt="facebook"></a></li>
                         <li class="social-account__item"><a href="#"><img
-                                src="src/image/twitter.svg"
+                                src="image/twitter.svg"
                                 alt="twitter"></a></li>
                     </ul>
                 </footer>
 
             </section>
             <section class="carousel-cell-team">
-                <img class="carousel-cell-team__person" src="src/image/ida_morrison.png"
+                <img class="carousel-cell-team__person" src="image/ida_morrison.png"
                      alt="meguel_obrien">
                 <address class="carousel-person-info">
                     <h4 class="carousel-person-info__name">Ida Morrison</h4>
@@ -215,19 +215,19 @@
                 <footer class="carousel-cell-team__socialnet">
                     <ul class="social-account">
                         <li class="social-account__item"><a href="#"><img
-                                src="src/image/behance.svg"
+                                src="image/behance.svg"
                                 alt="behance"></a></li>
                         <li class="social-account__item"><a href="#"><img
-                                src="src/image/linked-in.svg"
+                                src="image/linked-in.svg"
                                 alt="linked-in"></a></li>
                         <li class="social-account__item"><a href="#"><img
-                                src="src/image/google-.svg"
+                                src="image/google-.svg"
                                 alt="google"></a></li>
                         <li class="social-account__item"><a href="#"><img
-                                src="src/image/facebook.svg"
+                                src="image/facebook.svg"
                                 alt="facebook"></a></li>
                         <li class="social-account__item"><a href="#"><img
-                                src="src/image/twitter.svg"
+                                src="image/twitter.svg"
                                 alt="twitter"></a></li>
                     </ul>
                 </footer>
@@ -240,7 +240,7 @@
     <div id="map"></div>
     <div id="contact" class="fa-contact-overlay">
         <header class="fa-contact-header">
-            <img class="fa-contact-header__icon" src="src/image/marker.png" alt="icon_map">
+            <img class="fa-contact-header__icon" src="image/marker.png" alt="icon_map">
             <h3 class="fa-contact-header__title">GET IN TOUCH</h3>
         </header>
         <section class="fa-contact-content">
@@ -260,7 +260,7 @@
 
         <div class="fa-contact-location office-address">
             <div class="fa-contact-location__icon-block"><img
-                    src="src/image/icon-home-address.png" alt="icon home"></div>
+                    src="image/icon-home-address.png" alt="icon home"></div>
             <div class="fa-contact-location__description">Ikan Piranha Atas 220C <br>
                 Malang - East Java <br>
                 Indonesia
@@ -268,7 +268,7 @@
         </div>
         <div class="fa-contact-location office-telephone">
             <div class="fa-contact-location__icon-block"><img
-                    src="src/image/icon_phone.png" alt="icon tel"></div>
+                    src="image/icon_phone.png" alt="icon tel"></div>
             <div class="fa-contact-location__description">+38050940799 <br> +38093613892
             </div>
         </div>
@@ -283,35 +283,35 @@
         </address>
         <ul class="fo-footer-link-style">
             <li class="fo-footer-link-style__item"><a href="#"><img
-                    src="src/image/behance.svg"
+                    src="image/behance.svg"
                     alt="behance"></a></li>
             <li class="fo-footer-link-style__item"><a href="#"><img
-                    src="src/image/linked-in.svg"
+                    src="image/linked-in.svg"
                     alt="linked-in"></a></li>
             <li class="fo-footer-link-style__item"><a href="#"><img
-                    src="src/image/google-.svg"
+                    src="image/google-.svg"
                     alt="google"></a></li>
             <li class="fo-footer-link-style__item"><a href="#"><img
-                    src="src/image/facebook.svg"
+                    src="image/facebook.svg"
                     alt="facebook"></a></li>
             <li class="fo-footer-link-style__item"><a href="#"><img
-                    src="src/image/twitter.svg"
+                    src="image/twitter.svg"
                     alt="twitter"></a></li>
         </ul>
     </div>
 </footer>
 
 <a class="scroll-up" data-scroll href="#head">
-        <img class="scroll-up__icon" src="src/image/scroll-up.svg" alt="scroll-up">
+        <img class="scroll-up__icon" src="image/scroll-up.svg" alt="scroll-up">
 </a>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-<script src="src/lib/smooth-scroll.js"></script>
-<script src="src/lib/flickity.pkgd.min.js"></script>
+<script src="lib/smooth-scroll.js"></script>
+<script src="lib/flickity.pkgd.min.js"></script>
 <script async defer
         src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA8n45-wCbx-M_rQY1SdAdli-Y7EKH5ZU4&callback=initMap">
 </script>
-<script src="src/scripts/main.js"></script>
+<script src="scripts/main.js"></script>
 
 </body>
 
